# ogit

./: .gitignore  Cargo.toml  README.md  borrow_checker_notes.md  tree.txt
scripts/: demo.sh
src/: lib.rs  main.rs
src/ogit/: hashing_values.rs  init_repo.rs  initialize_repository.rs  mod.rs  object.rs  store.rs  tree.rs
tests/: build_tree_from_dir.rs  commit.rs  init_repo_and_hashing.rs  serialize_deserialize.rs  serialize_deserialize_tree.rs  store.rs
